refactor architecture, complite auth and create test for auth
