# server/docs/swagger.yaml
@@ -1,62 +1,6 @@
-basePath: /
+basePath: /v1
 definitions:
-  auth.ConflictErrorResponse:
-    properties:
-      error:
-        example: user with this email already sign-up
-        type: string
-      status:
-        example: Error
-        type: string
-    type: object
-  auth.EmailConfirmedRequest:
-    properties:
-      code:
-        example: 54JK64
-        type: string
-      email:
-        example: jon.doe@gmail.com
-        type: string
-    required:
-    - code
-    - email
-    type: object
-  auth.ErrorResponse:
-    properties:
-      error:
-        example: Invalid Password or Email
-        type: string
-      status:
-        example: Error
-        type: string
-    type: object
-  auth.InternalServerErrorResponse:
-    properties:
-      error:
-        example: failed to sign up
-        type: string
-      status:
-        example: Error
-        type: string
-    type: object
-  auth.NotSupportedProviderResponse:
-    properties:
-      error:
-        example: provider not supported
-        type: string
-      status:
-        example: Error
-        type: string
-    type: object
-  auth.SendConfirmedEmailCodeRequest:
-    properties:
-      email:
-        example: jon.doe@gmail.com
-        type: string
-    required:
-    - email
-    type: object
-  auth.SingInRequest:
+  handlers.UserSignUpRequest:
     properties:
       email:
         example: jon.doe@gmail.com
@@ -68,25 +12,7 @@ definitions:
     - email
     - password
     type: object
-  auth.SingInResponse:
-    properties:
-      access_token:
-        example: asdfasdfahgwea94i5)()(&_.KJFDI{.sadfasdIOSDJ
-        type: string
-      status:
-        example: OK
-        type: string
-    type: object
-  auth.UnauthorizedResponse:
-    properties:
-      error:
-        example: unauthorized
-        type: string
-      status:
-        example: error
-        type: string
-    type: object
-  auth.UserSignUpRequest:
+  handlers.UserSingInRequest:
     properties:
       email:
         example: jon.doe@gmail.com
@@ -98,34 +24,24 @@ definitions:
     - email
     - password
     type: object
-  auth.UserSignUpResponse:
+  response.Response:
+    description: Structure for a standard API response
     properties:
-      status:
-        example: OK
-        type: string
-    type: object
-  auth.ValidationErrorResponse:
-    properties:
+      data: {}
       error:
-        example: field Email is not a valid Email, field Password is a required field
+        example: any error
         type: string
       status:
-        example: Error
+        example: success/error
         type: string
     type: object
-  profile.CompleteProfileResponse:
-    properties:
-      message:
-        type: string
-      status:
-        type: string
-    type: object
-host: localhost:8080
 info:
-  contact: {}
-  description: REST API для приложения Offliner
+  contact:
+    name: Evdokimov Igor
+    url: https://t.me/epelptic
+  description: API for online catalog of PC components.
   title: Offliner API
-  version: "1.0"
+  version: 1.0.0
 paths:
   /auth/{provider}:
     get:
@@ -133,8 +49,8 @@ paths:
       - application/json
       description: Redirects the user to the OAuth provider for authentication.
       parameters:
-      - description: OAuth provider
-        example: '"google or yandex"'
+      - description: OAuth provider DON'T WORK IN SWAGGER!!!
+        example: '"google" or "yandex"'
         in: path
         name: provider
         required: true
@@ -143,100 +59,66 @@ paths:
       - application/json
       responses:
         "307":
-          description: Перенаправление к провайдеру
-        "404":
+          description: Redirecting to provider
+        "400":
           description: Provider not supported
           schema:
-            $ref: '#/definitions/auth.NotSupportedProviderResponse'
+            $ref: '#/definitions/response.Response'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/auth.InternalServerErrorResponse'
-      summary: Start OAuth2 Authorization
+            $ref: '#/definitions/response.Response'
+      summary: User SignWithOauth
       tags:
-      - auth
-  /auth/email-confirm:
-    post:
+      - Authentication
+  /auth/{provider}/callback:
+    get:
       consumes:
       - application/json
-      description: Validate confirmed code and is it confirmed update email_status
+      description: Handles the callback from the OAuth provider after the user has
+        authorized the app. THIS ENDPOINT IS CALLED BY THE OAUTH PROVIDER, NOT THE
+        FRONTEND!!!
       parameters:
-      - description: data for confirmed email
-        in: body
-        name: request
+      - description: OAuth provider
+        example: '"google" or "yandex"'
+        in: path
+        name: provider
         required: true
-        schema:
-          $ref: '#/definitions/auth.EmailConfirmedRequest'
+        type: string
+      - description: State parameter sent during OAuth authorization
+        example: '"randomstate123"'
+        in: query
+        name: state
+        required: true
+        type: string
+      - description: Authorization code returned by OAuth provider
+        example: '"authorizationcode123"'
+        in: query
+        name: code
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: Success email confirmation
+          description: User already exists, successfully authenticated
           schema:
-            $ref: '#/definitions/auth.UserSignUpResponse'
-        "400":
-          description: Error email confirmation
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/auth.InternalServerErrorResponse'
-      summary: Confirmation email address
-      tags:
-      - auth
-  /auth/email/send-confirm-code:
-    post:
-      consumes:
-      - application/json
-      description: Генерирует код подтверждения и отправляет его на указанный email
-      parameters:
-      - description: Email пользователя для подтверждения
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/auth.SendConfirmedEmailCodeRequest'
-      produces:
-      - application/json
-      responses:
+            $ref: '#/definitions/response.Response'
         "201":
-          description: Код подтверждения успешно отправлен
+          description: New user created and successfully authenticated
           schema:
-            $ref: '#/definitions/auth.UserSignUpResponse'
+            $ref: '#/definitions/response.Response'
         "400":
-          description: Ошибка валидации или неверный запрос
+          description: Provider not supported or invalid state
           schema:
-            $ref: '#/definitions/auth.ValidationErrorResponse'
-        "500":
-          description: Внутренняя ошибка сервера
-          schema:
-            $ref: '#/definitions/auth.InternalServerErrorResponse'
-      summary: Отправка кода подтверждения на email
-      tags:
-      - auth
-  /auth/refresh-token:
-    post:
-      consumes:
-      - application/json
-      description: Refreshes the access token using the provided refresh token from
-        cookies.
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successfully refreshed access token
-          schema:
-            $ref: '#/definitions/auth.SingInResponse'
-        "401":
-          description: Invalid or missing refresh token
-          schema:
-            $ref: '#/definitions/auth.UnauthorizedResponse'
+            $ref: '#/definitions/response.Response'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/auth.InternalServerErrorResponse'
-      summary: Refresh Access Token
+            $ref: '#/definitions/response.Response'
+      summary: OAuth2 Callback Handler
       tags:
-      - auth
+      - Authentication
   /auth/sign-in:
     post:
       consumes:
@@ -248,122 +130,66 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/auth.SingInRequest'
+          $ref: '#/definitions/handlers.UserSingInRequest'
       produces:
       - application/json
       responses:
         "200":
           description: User successfully signed in
           schema:
-            $ref: '#/definitions/auth.SingInResponse'
+            $ref: '#/definitions/response.Response'
         "400":
           description: Invalid request payload or validation error
           schema:
-            $ref: '#/definitions/auth.ValidationErrorResponse'
+            $ref: '#/definitions/response.Response'
         "401":
           description: Invalid Password or Email
           schema:
-            $ref: '#/definitions/auth.ErrorResponse'
+            $ref: '#/definitions/response.Response'
         "403":
           description: User email is not confirmed
           schema:
-            $ref: '#/definitions/auth.ErrorResponse'
+            $ref: '#/definitions/response.Response'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/auth.InternalServerErrorResponse'
-      summary: Sign In User
+            $ref: '#/definitions/response.Response'
+      summary: User SignIn
       tags:
-      - auth
+      - Authentication
   /auth/sign-up:
     post:
       consumes:
       - application/json
-      description: Creates a new user account with the provided details.
+      description: Registers a new user with the provided email and password. On success,
+        returns access and refresh tokens.
       parameters:
       - description: User registration details
         in: body
         name: user
         required: true
         schema:
-          $ref: '#/definitions/auth.UserSignUpRequest'
+          $ref: '#/definitions/handlers.UserSignUpRequest'
       produces:
       - application/json
       responses:
         "201":
-          description: User successfully registered
+          description: User successfully created
           schema:
-            $ref: '#/definitions/auth.UserSignUpResponse'
+            $ref: '#/definitions/response.Response'
         "400":
-          description: Invalid request payload or validation error
+          description: Validation error or invalid request payload
           schema:
-            $ref: '#/definitions/auth.ValidationErrorResponse'
+            $ref: '#/definitions/response.Response'
         "409":
-          description: User with this email already exists
+          description: Conflict - User with this email already exists
           schema:
-            $ref: '#/definitions/auth.ConflictErrorResponse'
+            $ref: '#/definitions/response.Response'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/auth.InternalServerErrorResponse'
-      summary: Sign Up User
+            $ref: '#/definitions/response.Response'
+      summary: User SignUp
       tags:
-      - auth
-  /user/avatar:
-    get:
-      consumes:
-      - application/json
-      description: Retrieves the avatar image based on the filename provided in the
-        query parameter.
-      parameters:
-      - description: Filename of the avatar image
-        in: query
-        name: filename
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Avatar image
-          schema:
-            type: file
-      security:
-      - ApiKeyAuth: []
-      summary: Get User Avatar
-      tags:
-      - profile
-  /user/complete-profile:
-    put:
-      consumes:
-      - multipart/form-data
-      description: Updates user profile details such as name, surname, patronymic,
-        date of birth, phone number, gender, and avatar.
-      parameters:
-      - description: User profile data JSON
-        in: formData
-        name: json
-        required: true
-        type: string
-      - description: Avatar image file
-        in: formData
-        name: avatar
-        type: file
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: User updated successfully
-          schema:
-            $ref: '#/definitions/profile.CompleteProfileResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Update User Profile
-      tags:
-      - profile
-securityDefinitions:
-  ApiKeyAuth:
-    in: header
-    name: Authorization
-    type: apiKey
+      - Authentication
 swagger: "2.0"
